Change Java Path

--- a/03-JMod/Makefile
+++ b/03-JMod/Makefile
@@ -14,14 +14,14 @@ clean:
 	
 package: build
 	mkdir -p lib
-	jar --create --file=lib/com.zuehlke.tvm.hal@1.0.jar --module-version=1.0  --main-class=com.zuehlke.tvm.Main -C mods/com.zuehlke.tvm.hal.typea .
+	jar --create --file=lib/com.zuehlke.tvm.hal@1.0.jar --module-version=1.0  --main-class=com.zuehlke.tvm.Main -C mods/com.zuehlke.tvm.hal.typeb .
 	jar --create --file=lib/com.zuehlke.tvm@1.0.jar --module-version=1.0 --main-class=com.zuehlke.tvm.Main -C mods/com.zuehlke.tvm .
 
 package-jmod: build
 	mkdir -p lib
-	jmod create --class-path mods/com.zuehlke.tvm.hal.typea --module-version=1.0 lib/com.zuehlke.tvm.hal@1.0.jmod
+	jmod create --class-path mods/com.zuehlke.tvm.hal.typeb --module-version=1.0 lib/com.zuehlke.tvm.hal@1.0.jmod
 	jmod create --class-path mods/com.zuehlke.tvm --module-version=1.0 --main-class=com.zuehlke.tvm.Main lib/com.zuehlke.tvm@1.0.jmod
-	jlink --module-path lib:/usr/lib/jvm/java-9-openjdk-i386/jmods --add-modules com.zuehlke.tvm --output com.zuehlke.tvm
+	jlink --module-path lib:/usr/lib/jvm/java-9-openjdk-amd64/jmods --add-modules com.zuehlke.tvm --output com.zuehlke.tvm
 
 
 run-package: package
